fix analyzer
